--- a/WebContent/forms/graph.html
+++ b/WebContent/forms/graph.html
@@ -32,7 +32,13 @@
     				    	var targetClass = target.isNode ? 'node' : 'edge';
     				    	if (targetClass == 'node'){
     				    		var node = target;
-    				    		if (button == 'right'){
+    				    		if (button == 'left'){
+    				    			try{
+    		    						global.item.open(node.getId());
+    		    					}catch(exception){
+    		    						console.log("clickNode = " + exception);
+    		    					}
+    				    		} else if (button = 'right'){
     				    			try{
 	    				    			if (!node.root && !node.loaded) {
 	    		    						node.loaded = true;
@@ -48,19 +54,13 @@
 	    		    						  });
 	    		    						_graph.loadRelatedItems(node.getId(),false,node.getPosition().x,node.getPosition().y);
 	    		    					}
-    				    			}catch(exception){
-    		    						console.log("clickNode = " + exception);
-    		    					}	
-    				    		} else if (button == 'left'){
-    				    			try{
-    		    						global.item.open(node.getId());
-    		    					}catch(exception){
-    		    						console.log("clickNode = " + exception);
-    		    					}
+	  				    			} catch(exception){
+	  		    						console.log("clickNode = " + exception);
+	  		    					}
     				    		}
     				    	}
     				  }
-    			});
+    			});    			
     		},
     		loadRelatedItems : function(itemId,layout,x,y){
     			$.getJSON( "api/item.php?id="+itemId+"&direction=both&related_items", function(result) {
@@ -70,25 +70,28 @@
 						var nodes = [];
 						var edges = [];
 						var elements = result.objects;
-						var nodex = -40;
+						var nodex = -30;
 						for (var e = 0; e < elements.length; e++){
 			    			element = elements[e];
 			    			var nodeExists = _graph.cy.getNode(element.id);
 			    			if (typeof nodeExists === "undefined"){
 			    				var node = {
-				    				  id 		: element.id,
-				    				  attributes: {
-				    				  	text 		: i18next.t("category."+element.category.name) + " - " + element.name,
-				    			     	shape		: 'circle'
-				    				  },
-				    				  data : {
+				    				id 		: element.id,
+				    				attributes : {
+				    					color		: 'green',
+				    				  	text 		: i18next.t("category."+element.category.name) + " - " + element.name + " - " + element.category.name,
+				    				  	shape		: 'circle',
+				    				  	radius		: 2
+				    				},
+				    				data : {
 				    			      	root		: false, 
 				    				  	loaded		: false
-				    				  }
+				    				}
 						    	};
+			    				_graph.setStyle(element,node);
 				    			if (!layout){
 				    				node.attributes.x = x+nodex;
-				    				node.attributes.y = y-15;
+				    				node.attributes.y = y-10;
 				    				nodex += 10;
 				    			}
 				    			nodes.push(node);
@@ -107,18 +110,39 @@
 					}
 				});
     		},
+    		setStyle : function(item,node){
+    			//"circle"|"cross"|"diamond"|"pentagon"|"square"|"star"|"equilateral"
+    			if ((item.category.name == 'software') || (item.category.name == 'solution')){
+					node.attributes.shape = 'diamond';
+				} else if (item.category.name == 'actor'){
+					node.attributes.shape = 'star';
+				} else if ((item.category.name == 'service') || (item.category.name == 'process') || (item.category.name == 'domain') || (item.category.name == 'data')){
+					node.attributes.shape = 'pentagon';
+				} else if ((item.category.name == 'device') || (item.category.name == 'server')) {
+					node.attributes.shape = 'square';
+				} else if (item.category.name == 'location'){
+					node.attributes.shape = 'equilateral';
+				} else {
+					node.attributes.shape = 'circle';
+				}
+    		},
     		refreshItem : function(item){
     			_graph.cy.clearGraph();
     			if (item != null){
-    				_graph.cy.addNode({
-    						id 		: item.id,
-    						attributes: {
-    							text 	: i18next.t("category."+item.category.name) + " - " + item.name
-    						},
-    						data : {
-    							root 	: true
-    						}
-    				});
+    				var node = {
+       					id 			: item.id,
+       					attributes	: {
+       						text 		: i18next.t("category."+item.category.name) + " - " + item.name,
+       						color		: 'blue',
+   		    				shape		: 'circle',
+   	    				  	radius		: 2
+       					},
+       					data 		: {
+       						root 		: true
+       					}
+       				};
+    				_graph.setStyle(item,node);
+    				_graph.cy.addNode(node);
     				_graph.loadRelatedItems(item.id,true);
     			}
     		}
