--- a/WebContent/forms/graph.html
+++ b/WebContent/forms/graph.html
@@ -79,7 +79,7 @@
 				    				id 		: element.id,
 				    				attributes : {
 				    					color		: 'green',
-				    				  	text 		: i18next.t("category."+element.category.name) + " - " + element.name + " - " + element.category.name,
+				    				  	text 		: i18next.t("category."+element.category.name) + " - " + element.name,
 				    				  	shape		: 'circle',
 				    				  	radius		: 2
 				    				},
